updated home.html html

--- a/app/public/home.html
+++ b/app/public/home.html
@@ -17,7 +17,9 @@
     <div class="jumbotron">
       <h1 class="text-center"><span class="fa fa-fire"></span> Friend Finder</h1>
       <hr>
-      <h2 class="text-center">Welcome to Friend Finder! Click below to begin the survey!</h2>
+      <h2 class="text-center">Welcome to Friend Finder!</h2>
+      <br>
+      <h4 class="text-center">- Click below to begin the survey -</h4>
       <br>
 
       <div class="text-center">
