--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -191,7 +191,7 @@
 
   <script type="text/javascript">
     // Chosen CSS
-    var config = {
+    let config = {
       ".chosen-select": {},
       ".chosen-select-deselect": {
         allow_single_deselect: true
@@ -207,7 +207,7 @@
       }
     };
 
-    for (var selector in config) {
+    for (let selector in config) {
       $(selector).chosen(config[selector]);
     }
 
@@ -217,7 +217,7 @@
 
       // Form validation
       function validateForm() {
-        var isValid = true;
+        let isValid = true;
         $(".form-control").each(function() {
           if ($(this).val() === "") {
             isValid = false;
@@ -236,7 +236,7 @@
       // If all required fields are filled
       if (validateForm()) {
         // Create an object for the user"s data
-        var userData = {
+        let userData = {
           name: $("#name").val(),
           photo: $("#photo").val(),
           scores: [
@@ -254,11 +254,11 @@
         };
 
         // AJAX post the data to the friends API.
-        $.post("/api/friends", userData, function(data) {
+        $.post("/api/friends", userData, function(friendsData) {
 
           // Grab the result from the AJAX post so that the best match's name and photo are displayed.
-          $("#match-name").text(data.name);
-          $("#match-img").attr("src", data.photo);
+          $("#match-name").text(friendsData.name);
+          $("#match-img").attr("src", friendsData.photo);
 
           // Show the modal with the best match
           $("#results-modal").modal("toggle");
