added code in apiRoutes to compare the users scores with the scores in the friends scores array

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -256,6 +256,8 @@
         // AJAX post the data to the friends API.
         $.post("/api/friends", userData, function(friendsData) {
 
+          console.log(userData)
+
           // Grab the result from the AJAX post so that the best match's name and photo are displayed.
           $("#match-name").text(friendsData.name);
           $("#match-img").attr("src", friendsData.photo);
