--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -36,8 +36,8 @@
 
     <hr>
 
-    <h3><strong>Question 1</strong></h3>
-    <h4>Your mind is always buzzing with unexplored ideas and plans.</h4>
+    <h3><strong>Question 1 (Adventure)</strong></h3>
+    <h4>You enjoy open worlds, and lots of exploring</h4>
     <select class="chosen-select" id="q1">
       <option value=""></option>
       <option value="1">1 (Strongly Disagree)</option>
@@ -47,8 +47,8 @@
       <option value="5">5 (Strongly Agree)</option>
     </select>
 
-    <h3><strong>Question 2</strong></h3>
-    <h4>Generally speaking, you rely more on your experience than your imagination.</h4>
+    <h3><strong>Question 2 (FPS)</strong></h3>
+    <h4>Precision and speed are your best friends</h4>
     <select class="chosen-select" id="q2">
       <option value=""></option>
       <option value="1">1 (Strongly Disagree)</option>
@@ -59,8 +59,8 @@
     </select>
 
 
-    <h3><strong>Question 3</strong></h3>
-    <h4>You find it easy to stay relaxed and focused even when there is some pressure.</h4>
+    <h3><strong>Question 3 (Fighting)</strong></h3>
+    <h4>Button mashers are the worst kind of people</h4>
     <select class="chosen-select" id="q3">
       <option value=""></option>
       <option value="1">1 (Strongly Disagree)</option>
@@ -71,8 +71,8 @@
     </select>
 
 
-    <h3><strong>Question 4</strong></h3>
-    <h4>You rarely do something just out of sheer curiosity.</h4>
+    <h3><strong>Question 4 (Strategy/RPG)</strong></h3>
+    <h4>You like to plan your journey with precision</h4>
     <select class="chosen-select" id="q4">
       <option value=""></option>
       <option value="1">1 (Strongly Disagree)</option>
@@ -83,8 +83,8 @@
     </select>
 
 
-    <h3><strong>Question 5</strong></h3>
-    <h4>People can rarely upset you.</h4>
+    <h3><strong>Question 5 (Puzzle)</strong></h3>
+    <h4>For every problem, there is a solution</h4>
     <select class="chosen-select" id="q5">
       <option value=""></option>
       <option value="1">1 (Strongly Disagree)</option>
@@ -95,8 +95,8 @@
     </select>
 
 
-    <h3><strong>Question 6</strong></h3>
-    <h4>It is often difficult for you to relate to other people’s feelings.</h4>
+    <h3><strong>Question 6 (Adventure)</strong></h3>
+    <h4>Getting side tracked is half of the fun</h4>
     <select class="chosen-select" id="q6">
       <option value=""></option>
       <option value="1">1 (Strongly Disagree)</option>
@@ -107,8 +107,8 @@
     </select>
 
 
-    <h3><strong>Question 7</strong></h3>
-    <h4>In a discussion, truth should be more important than people’s sensitivities.</h4>
+    <h3><strong>Question 7 (FPS)</strong></h3>
+    <h4>No campers allowed!</h4>
     <select class="chosen-select" id="q7">
       <option value=""></option>
       <option value="1">1 (Strongly Disagree)</option>
@@ -118,8 +118,9 @@
       <option value="5">5 (Strongly Agree)</option>
     </select>
 
-    <h3><strong>Question 8</strong></h3>
-    <h4>You rarely get carried away by fantasies and ideas.</h4>
+
+    <h3><strong>Question 8 (Fighting)</strong></h3>
+    <h4>You've gotta have the fastest hand in the west to be the best</h4>
     <select class="chosen-select" id="q8">
       <option value=""></option>
       <option value="1">1 (Strongly Disagree)</option>
@@ -129,8 +130,8 @@
       <option value="5">5 (Strongly Agree)</option>
     </select>
 
-    <h3><strong>Question 9</strong></h3>
-    <h4>You think that everyone’s views should be respected regardless of whether they are supported by facts or not.</h4>
+    <h3><strong>Question 9 (Strategy/RPG)</strong></h3>
+    <h4>Everybody has specific strengths and weaknesses</h4>
     <select class="chosen-select" id="q9">
       <option value=""></option>
       <option value="1">1 (Strongly Disagree)</option>
@@ -140,8 +141,8 @@
       <option value="5">5 (Strongly Agree)</option>
     </select>
 
-    <h3><strong>Question 10</strong></h3>
-    <h4>You feel more energetic after spending time with a group of people.</h4>
+    <h3><strong>Question 10 (Puzzle)</strong></h3>
+    <h4>Logic is your best friend</h4>
     <select class="chosen-select" id="q10">
       <option value=""></option>
       <option value="1">1 (Strongly Disagree)</option>
