finalized api logic, added comments to explain code

--- a/app/public/home.html
+++ b/app/public/home.html
@@ -2,12 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Tables Page</title>
-
-  <!-- Latest compiled and minified CSS -->
+  <title>Home Page</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-
 </head>
 <body>
 
@@ -15,9 +12,9 @@
   <div class="container">
 
     <div class="jumbotron">
-      <h1 class="text-center"><span class="fa fa-fire"></span> Friend Finder</h1>
+      <h1 class="text-center"></span> Video Game (Match) Guru</h1>
       <hr>
-      <h2 class="text-center">Welcome to Friend Finder!</h2>
+      <h2 class="text-center">Let us help you find the best sidekick to play your favorite games with!</h2>
       <br>
       <h4 class="text-center">- Click below to begin the survey -</h4>
       <br>
